--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@opencclint/cli": "^2.0.4",
-    "@brokenbones/opencclint-config": "^0.0.1",
+    "opencclint-config": "^0.0.6",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5"
   },
